--- a/.godot/editor/editor_layout.cfg
+++ b/.godot/editor/editor_layout.cfg
@@ -19,25 +19,25 @@ dock_filesystem_split=0
 dock_filesystem_display_mode=0
 dock_filesystem_file_sort=0
 dock_filesystem_file_list_display_mode=1
-dock_filesystem_selected_paths=PackedStringArray("res://")
-dock_filesystem_uncollapsed_paths=PackedStringArray("Favorites", "res://")
+dock_filesystem_selected_paths=PackedStringArray("res://inventory/InventoryUI2.gd")
+dock_filesystem_uncollapsed_paths=PackedStringArray("Favorites", "res://", "res://script/", "res://scene/", "res://inventory/")
 dock_3="Scene,Import"
 dock_4="FileSystem"
 dock_5="Inspector,Node,History"
 
 [EditorNode]
 
-open_scenes=PackedStringArray("res://scene/world.tscn")
+open_scenes=PackedStringArray("res://scene/world.tscn", "res://scene/player2.tscn", "res://scene/player.tscn")
 current_scene="res://scene/world.tscn"
 center_split_offset=0
 selected_default_debugger_tab_idx=0
-selected_main_editor_idx=0
+selected_main_editor_idx=2
 selected_bottom_panel_item=0
 
 [ScriptEditor]
 
-open_scripts=[]
-selected_script=""
+open_scripts=["res://script/Collectable.gd", "res://inventory/Inventory.gd", "res://inventory/InventoryItem.gd", "res://inventory/InventorySlot.gd", "res://inventory/InventoryUI2.gd", "res://inventory/InventoryUI.gd", "res://inventory/Inventory_ui_slot.gd", "res://script/Player2.gd", "res://script/Player.gd"]
+selected_script="res://inventory/InventoryUI.gd"
 open_help=[]
 script_split_offset=70
 list_split_offset=0
