--- a/.godot/editor/editor_layout.cfg
+++ b/.godot/editor/editor_layout.cfg
@@ -4,7 +4,7 @@ dock_1_selected_tab_idx=0
 dock_2_selected_tab_idx=0
 dock_3_selected_tab_idx=0
 dock_4_selected_tab_idx=0
-dock_5_selected_tab_idx=0
+dock_5_selected_tab_idx=1
 dock_6_selected_tab_idx=0
 dock_7_selected_tab_idx=0
 dock_8_selected_tab_idx=0
@@ -13,31 +13,32 @@ dock_split_2=0
 dock_split_3=0
 dock_hsplit_1=0
 dock_hsplit_2=270
-dock_hsplit_3=-270
+dock_hsplit_3=-287
 dock_hsplit_4=0
 dock_filesystem_split=0
 dock_filesystem_display_mode=0
 dock_filesystem_file_sort=0
 dock_filesystem_file_list_display_mode=1
-dock_filesystem_selected_paths=PackedStringArray("res://objets.tres")
-dock_filesystem_uncollapsed_paths=PackedStringArray("Favorites", "res://", "res://sources/", "res://sources/beach_expansion_v1.1/", "res://script/")
+dock_filesystem_selected_paths=PackedStringArray("res://scene/rock.tscn")
+dock_filesystem_uncollapsed_paths=PackedStringArray("Favorites", "res://", "res://sources/", "res://sources/beach_expansion_v1.1/", "res://script/", "res://scene/", "res://art/", "res://art/environement/")
 dock_3="Scene,Import"
 dock_4="FileSystem"
 dock_5="Inspector,Node,History"
 
 [EditorNode]
 
-open_scenes=PackedStringArray("res://scene/world.tscn", "res://scene/player2.tscn", "res://scene/player.tscn", "res://scene/stick.tscn")
+open_scenes=PackedStringArray("res://scene/world.tscn", "res://scene/player.tscn", "res://scene/player2.tscn", "res://inventory/inventory_ui.tscn")
 current_scene="res://scene/world.tscn"
 center_split_offset=0
 selected_default_debugger_tab_idx=0
 selected_main_editor_idx=2
+selected_bottom_panel_item=0
 
 [ScriptEditor]
 
-open_scripts=["res://script/Collectable.gd", "res://inventory/Inventory.gd", "res://inventory/InventoryItem.gd", "res://inventory/InventorySlot.gd", "res://inventory/InventoryUI2.gd", "res://inventory/InventoryUI.gd", "res://inventory/Inventory_ui_slot.gd", "res://script/Player2.gd", "res://script/Player.gd", "res://scene/world.gd"]
-selected_script="res://scene/world.gd"
-open_help=["NavigationRegion2D"]
+open_scripts=["res://script/Collectable.gd", "res://inventory/Inventory.gd", "res://inventory/InventoryItem.gd", "res://inventory/InventorySlot.gd", "res://inventory/InventoryUI2.gd", "res://inventory/InventoryUI.gd", "res://inventory/Inventory_ui_slot.gd", "res://script/Player2.gd", "res://scene/player2.gd", "res://script/Player.gd", "res://scene/world.gd"]
+selected_script="res://script/Player2.gd"
+open_help=["NavigationRegion2D", "Node", "StaticBody2D"]
 script_split_offset=70
 list_split_offset=0
 
