--- a/.godot/editor/editor_layout.cfg
+++ b/.godot/editor/editor_layout.cfg
@@ -4,7 +4,7 @@ dock_1_selected_tab_idx=0
 dock_2_selected_tab_idx=0
 dock_3_selected_tab_idx=0
 dock_4_selected_tab_idx=0
-dock_5_selected_tab_idx=1
+dock_5_selected_tab_idx=0
 dock_6_selected_tab_idx=0
 dock_7_selected_tab_idx=0
 dock_8_selected_tab_idx=0
@@ -19,7 +19,7 @@ dock_filesystem_split=0
 dock_filesystem_display_mode=0
 dock_filesystem_file_sort=0
 dock_filesystem_file_list_display_mode=1
-dock_filesystem_selected_paths=PackedStringArray("res://scene/rock.tscn")
+dock_filesystem_selected_paths=PackedStringArray("res://script/Player2.gd")
 dock_filesystem_uncollapsed_paths=PackedStringArray("Favorites", "res://", "res://sources/", "res://sources/beach_expansion_v1.1/", "res://script/", "res://scene/", "res://art/", "res://art/environement/")
 dock_3="Scene,Import"
 dock_4="FileSystem"
@@ -28,16 +28,16 @@ dock_5="Inspector,Node,History"
 [EditorNode]
 
 open_scenes=PackedStringArray("res://scene/world.tscn", "res://scene/player.tscn", "res://scene/player2.tscn", "res://inventory/inventory_ui.tscn")
-current_scene="res://scene/world.tscn"
+current_scene="res://scene/player2.tscn"
 center_split_offset=0
 selected_default_debugger_tab_idx=0
 selected_main_editor_idx=2
-selected_bottom_panel_item=0
+selected_bottom_panel_item=1
 
 [ScriptEditor]
 
 open_scripts=["res://script/Collectable.gd", "res://inventory/Inventory.gd", "res://inventory/InventoryItem.gd", "res://inventory/InventorySlot.gd", "res://inventory/InventoryUI2.gd", "res://inventory/InventoryUI.gd", "res://inventory/Inventory_ui_slot.gd", "res://script/Player2.gd", "res://scene/player2.gd", "res://script/Player.gd", "res://scene/world.gd"]
-selected_script="res://script/Player2.gd"
+selected_script="res://scene/player2.gd"
 open_help=["NavigationRegion2D", "Node", "StaticBody2D"]
 script_split_offset=70
 list_split_offset=0
@@ -47,3 +47,13 @@ list_split_offset=0
 open_shaders=[]
 split_offset=0
 selected_shader=""
+
+[editor_log]
+
+log_filter_0=true
+log_filter_2=true
+log_filter_1=false
+log_filter_3=true
+log_filter_4=false
+collapse=false
+show_search=true
