--- a/.godot/global_script_class_cache.cfg
+++ b/.godot/global_script_class_cache.cfg
@@ -1,4 +1,22 @@
 list=Array[Dictionary]([{
+"base": &"Node",
+"class": &"AsepriteImportData",
+"icon": "",
+"language": &"GDScript",
+"path": "res://addons/aseprite_importer/classes/AsepriteImportData.gd"
+}, {
+"base": &"Node",
+"class": &"AsepriteImporter",
+"icon": "",
+"language": &"GDScript",
+"path": "res://addons/aseprite_importer/classes/AsepriteImporter.gd"
+}, {
+"base": &"Node",
+"class": &"EditorTheme",
+"icon": "",
+"language": &"GDScript",
+"path": "res://addons/aseprite_importer/classes/EditorTheme.gd"
+}, {
 "base": &"Resource",
 "class": &"Inventory",
 "icon": "",
