--- a/.godot/editor/editor_layout.cfg
+++ b/.godot/editor/editor_layout.cfg
@@ -28,16 +28,16 @@ dock_5="Inspector,Node,History"
 [EditorNode]
 
 open_scenes=PackedStringArray("res://scene/world.tscn", "res://scene/rock.tscn", "res://inventory/inventory_ui.tscn", "res://scene/player5.tscn", "res://scene/player4.tscn", "res://scene/player3.tscn", "res://scene/player2.tscn", "res://scene/apple.tscn")
-current_scene="res://scene/world.tscn"
+current_scene="res://inventory/inventory_ui.tscn"
 center_split_offset=-236
 selected_default_debugger_tab_idx=0
-selected_main_editor_idx=2
+selected_main_editor_idx=0
 selected_bottom_panel_item=0
 
 [ScriptEditor]
 
 open_scripts=["res://scene/blackboard_1.gd", "res://scene/blackboard_2.gd", "res://scene/boat.gd", "res://script/Collectable.gd", "res://inventory/Inventory.gd", "res://inventory/InventoryItem.gd", "res://inventory/InventorySlot.gd", "res://inventory/InventoryUI2.gd", "res://inventory/InventoryUI3.gd", "res://inventory/InventoryUI4.gd", "res://inventory/InventoryUI5.gd", "res://inventory/InventoryUI.gd", "res://inventory/Inventory_ui_slot.gd", "res://scene/player2.gd", "res://scene/player3.gd", "res://script/Player.gd", "res://scene/pont.gd", "res://random.gd", "res://scene/rock.gd", "res://scene/text.gd", "res://scene/world.gd"]
-selected_script="res://scene/text.gd"
+selected_script="res://inventory/InventoryUI.gd"
 open_help=["NavigationRegion2D", "Node", "StaticBody2D"]
 script_split_offset=70
 list_split_offset=0
